service-to-service-communication-traffic-rules/demo2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo2-deployment
spec:
  selector:
    matchLabels:
      app: demo2
  replicas: 1
  template:
    metadata:
      labels:
        app: demo2
    spec:
      containers:
      - name: demo2
        image: docker.io/sreddyku/demo2:0.0.2-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo2-svc
spec:
  selector:
    app: demo2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
